# MathOCR

./: .gitignore  CMakeLists.txt  LICENSE  OCREngine.cpp  OCREngine.h  README.MD  main.cpp  utils.cpp  utils.h
